# twitch-chat-replica

./: Cargo.toml  LICENSE  README.md
generator/: Cargo.toml
generator/src/: lib.rs
server/: Cargo.toml
server/src/: api.rs  emulator.rs  main.rs
